<resources>
    <string name="custom_default_web_client_id" translatable="false">962591447537-04pjov58q677hbjtenu3pav4e4lib4he.apps.googleusercontent.com</string>

    <string name="app_name">TorTam</string>
    <!-- Munu Drawer Strings -->
    <string name="categories">Категории</string>
    <string name="categories_cakes">Торты</string>
    <string name="categories_cupcakes">Капкейки</string>
    <string name="categories_bouquets">Букеты</string>
    <string name="categories_baskets">Корзины</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <!--  Sign Dialog  -->
    <string name="account">Аккаунт</string>
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите Ваш email адресс</string>
    <string name="account_reset_password">Восстановить</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="account_sign_up">Регистрация</string>
    <string name="account_sign_in">Вход</string>
    <string name="account_sign_out">Выход</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_log_in">Войдите</string>
    <string name="sign_and">или</string>
    <string name="sign_exit">Выход</string>
    <string name="sign_registr">зарегистрируйтесь</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_done">На вашу почтку была отправлена ссылка для подтвержения вашего аккаунта, пожалуйста подтвердите Ваш аккаунт!</string>

    <!--    -->
    <string name="link_done">Email успешно подключен к аккаунту Google</string>
    <string name="enter_to_g">У вас уже есть аккаунт с такой электронной почтой, войдите по не могу</string>

    <!--  Edit Activity  -->
    <string name="select_country">* Выбирите страну</string>
    <string name="select_city">Выбирите город</string>
</resources>